ingress-service/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: online-shop
spec:
  replicas: 5
  selector:
    matchLabels:
      app: online-shop
  template:
    metadata:
      labels:
        app: online-shop
    spec:
      containers:
      - name: online-shop
        image: amitabhdevops/online_shop:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
---

apiVersion: v1
kind: Service
metadata:
  name: online-shop-service
spec:
  selector:
    app: online-shop
  ports:
  - port: 3000
    targetPort: 3000
